# janki-app

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 00478cfd847d_first.py  5c5c8eae4465_added_email.py  d325c0acea4b_added_models.py  e56e984290c4_first.py
src/: app.py  config.py  main.py
src/auth/: models.py
src/cards/: models.py
src/database/: __init__.py
