[tool.poetry]
# package-mode = false
name = "janki-app"
version = "0.1.0"
description = "Приложение для интервальных повторений знаний по методу Anki"
authors = ["Raphael Golubev <raphael.golubev@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/raphaelgolubev/janki_app"
keywords = ["anki", "janki", "anki_app", "anki_app_python"]

packages = [
    { include = "src" }
]

[tool.poetry.scripts]
japp = "src.main:main" # poetry run japp

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
